--- a/style.css
+++ b/style.css
@@ -1,15 +1,26 @@
 *{
     margin:0;
     padding:0;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+span{
+    color:#ffb700;
+    font-family:'Times New Roman';
 }
 
 .nav-bar{
-    display : flex ;
-    align-items : center ;
-    justify-content : space-around;
-    /* border-bottom: 1px solid black; */
-    box-shadow:5px 8px 10px rgba(0,0,0,0.1) ;
+  position: fixed;          /* navbar fixed */
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index:10000;
+  background-color: white;
+  display : flex ;
+  align-items : center ;
+  justify-content : space-around;
+  box-shadow:5px 8px 10px rgba(0,0,0,0.1) ;
+    
 }
 #logo{
 height:3rem;
@@ -49,14 +60,20 @@ margin-bottom: 1rem;
     height: 5rem;
     width: 50%;
 }
-.content .part-1 .btn{
-    margin-top:8rem;
+.btn{
+    margin-top:5rem;
     background-color:#FFC000;
     border: none;
-    padding:.3rem;
+    padding:.8rem;
     border-radius: 2px;
     word-spacing: 3px;
     color: white;
+}
+.btn:hover{
+    background-color: #ffb700;
+    box-shadow: 2px 5px 5px rgba(0,0,0,.1);
+    transition: ease-in 0.5s;
+    font-size:.9rem;
 }
 .content .part-2{
     margin-right: 3rem;
@@ -64,3 +81,155 @@ margin-bottom: 1rem;
     width: 50%;
 
 }
+
+.container{
+    display: flex;
+    margin-top:6rem;
+    align-items: center;
+}
+.container .about-img{
+    width:60%;
+    
+}
+.container .about-img img{
+    width: 100%;
+}
+
+.container .about-content{
+    width:40%;
+    margin-right: 4rem;
+}
+
+.container .about-content h1{
+    margin-bottom: 2rem;
+}
+
+.container .about-content h3{
+    margin-bottom: 2rem;
+}
+
+
+.menu-content {
+ margin-top: 5rem;
+ text-align: center;
+}
+
+.menu-cards{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 in a row */
+  gap: 20px;
+  padding: 20px;
+}
+
+.card{
+    height:23rem;
+    width:80%;
+    border:1px solid black;  
+    padding:.5rem;
+    display: flex;
+    flex-direction: column;
+}
+.card h3{
+    padding-bottom: .5rem;
+}
+.card .card-details{
+    padding-bottom: .5rem;
+}
+.card-price{
+    padding-bottom: .1rem;
+}
+.card-img{
+    height:55%;
+    width:100%;
+}
+
+.rating{
+padding:.5rem;
+}
+
+.card-btns{
+    padding-bottom: .5rem;
+}
+.card-btn{
+    background-color: black;
+    color:white;
+    padding: .2rem;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+}
+
+.card-btn:hover{
+   box-shadow: 2px 8px 8px rgba(0,0,0,.3);
+}
+
+
+
+/* gallery */
+
+.gallery{
+    margin-top: 5rem;
+   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.gallery .g-img{
+  position: relative;
+  /* width: 300px;
+  height: 220px; */
+  overflow: hidden;
+}
+
+.gallery .g-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.overlap {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0;
+  transition: 0.6s ease;
+  text-align: center;
+  padding: 15px;
+}
+/* text & button */
+.overlap h3 {
+  color: #f4c430;
+  font-size: 2.5rem;
+  margin-bottom: 8px;
+}
+
+.overlap p {
+  font-size: 1.5rem;
+  margin-bottom: 12px;
+}
+
+.overlap a{
+  text-decoration: none;
+  padding: 8px 18px;
+  border: none;
+  background: #ffb700;
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+}
+.g-img:hover .overlap {
+  opacity: 1;
+}
+.overlap a:hover{
+      box-shadow: 2px 8px 8px rgba(255,255,255,.2);
+      font-size: larger;
+      height: max-content;
+}
+
+
